tests/rosetta/out/Rust/cheryls-birthday.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:40:01Z
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
struct Birthday {
        month: i32,
        day: i32,
}

fn append<T: Clone>(mut v: Vec<T>, item: T) -> Vec<T> {
    v.push(item);
    v
}

fn main() {
    fn monthUnique(b: Birthday, list: Vec<Birthday>) -> bool {
        let mut c = 0;
        for x in list {
            if x.month == b.month {
                c += 1;
            }
        }
        return c == 1;
    }
    fn dayUnique(b: Birthday, list: Vec<Birthday>) -> bool {
        let mut c = 0;
        for x in list {
            if x.day == b.day {
                c += 1;
            }
        }
        return c == 1;
    }
    fn monthWithUniqueDay(b: Birthday, list: Vec<Birthday>) -> bool {
        for x in list {
            if x.month == b.month && dayUnique(&x.clone(), list) {
                return true;
            }
        }
        return false;
    }
    fn bstr(b: Birthday) -> &'static str {
        let months = vec!["", "January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
        return format!("{}{}", format!("{}{}", months[b.month as usize], " "), b.day.to_string());
    }
    let mut choices: Vec<Birthday> = vec![Birthday { month: 5, day: 15 }, Birthday { month: 5, day: 16 }, Birthday { month: 5, day: 19 }, Birthday { month: 6, day: 17 }, Birthday { month: 6, day: 18 }, Birthday { month: 7, day: 14 }, Birthday { month: 7, day: 16 }, Birthday { month: 8, day: 14 }, Birthday { month: 8, day: 15 }, Birthday { month: 8, day: 17 }];
    let mut filtered: Vec<Birthday> = vec![];
    for bd in choices {
        if !monthUnique(&bd.clone(), choices) {
            filtered = append(filtered, bd.clone());
        }
    }
    let mut filtered2: Vec<Birthday> = vec![];
    for bd in filtered {
        if !monthWithUniqueDay(&bd.clone(), filtered) {
            filtered2 = append(filtered2, bd.clone());
        }
    }
    let mut filtered3: Vec<Birthday> = vec![];
    for bd in filtered2 {
        if dayUnique(&bd.clone(), filtered2) {
            filtered3 = append(filtered3, bd.clone());
        }
    }
    let mut filtered4: Vec<Birthday> = vec![];
    for bd in filtered3 {
        if monthUnique(&bd.clone(), filtered3) {
            filtered4 = append(filtered4, bd.clone());
        }
    }
    if filtered4.len() as i32 == 1 {
        println!("{}", format!("{}{}", "Cheryl's birthday is ", bstr(&filtered4[0])));
    } else {
        println!("Something went wrong!");
    }
}
